# simcity

./: .gitignore  Cargo.toml  Makefile  README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CityMap.jsx  ControlToolbar.jsx  Metrics.jsx
src/: main.rs
src/agent/: agent.rs  metrics.rs  mod.rs  state.rs
src/city/: cell.rs  config.rs  grid.rs  mod.rs
src/simulation/: config.rs  metrics.rs  mod.rs  simulation.rs
src/visualization/: mod.rs
