[package]
name = "simcity"
version = "0.1.0"
edition = "2021"
description = "city traffic simulator"
authors = ["keuin"]

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
anyhow = "1.0.98"
